# oresat-cfc-software

./: .gitignore  README.md  convert_captures.py  oresat-cfcd.service  org.OreSat.CFC.conf  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: tests.yaml
debian/: changelog  control  oresat-cfc.install  prerm
oresat_cfc/: __init__.py  __main__.py  cfc_resource.py  cfc_tec.py  cfc_watchdog_resource.py  convert_captures.py  main.py  oresat_cfc.py  pirt1280.py  tec.py  tec_controller.py  tec_resource.py  tec_watchdog_resource.py
oresat_cfc/data/: oresat_cfc.dcf  oresat_cfc.eds
oresat_cfc/drivers/: pirt1280.py  rc625.py  tec.py
oresat_cfc/resources/: cfc.py  tec.py
oresat_cfc/services/: camera.py  pirt1280.py  tec.py  tec_controller.py
oresat_cfc/templates/: cfc.html
scripts/: convert_captures.py
tec_watchdog/: tec-watchdog.service  tec_watchdog.py
tests/drivers/: test_pirt1280.py
