[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "oresat-cfc"
description = "OreSat CFC OLAF app"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "GPL-3.0"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Embedded Systems",
]
dependencies = [
    "imagecodecs",
    "numpy",
    "opencv-python-headless==4.6.0.66",
    "oresat-olaf>=2.2.0",
    "simple-pid",
    "spidev",
    "tifffile",
]
dynamic = ["version"]

[project.scripts]
oresat-cfc = "oresat_cfc.__main__:main"

[tool.setuptools.dynamic]
version = {attr = "oresat_cfc.__version__"}

[tool.setuptools.packages.find]
exclude = ["docs*"]

[tool.setuptools.package-data]
"*" = ["*.eds", "*.dcf", "*.html"]
